# Acute-Angle-Chain

./: .cproject  .genesis.json.swp  .gitignore  .gitmodules  BP_Instructions.md  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  TUTORIAL.md  aac.doxygen.in  aacio.version.in  aacio_build.sh  aacio_install.sh  aacio_uninstall.sh  build-for-win10.md  circle.yml  genesis.json  mainnet-genesis.json  testnet.md  testnet.template  vim.exe.stackdump
.buildkite/: coverage.yml  debug.yml  long_running_tests.yml  pipeline.yml
CMakeModules/: AacioTester.cmake.in  AacioTesterBuild.cmake.in  FindWasm.cmake  MASSigning.cmake  additionalPlugins.cmake  doxygen.cmake  installer.cmake  wasm.cmake
Docker/: Dockerfile  README.md  claac.sh  config.ini  docker-compose-aacio1.0.yaml  docker-compose-latest.yml  docker-compose.yml  nodaacd.sh  nodeosd.sh
Docker/builder/: Dockerfile
Docker/dev/: Dockerfile
contracts/: CMakeLists.txt
contracts/aacio.bios/: CMakeLists.txt  Find Results  aacio.bios.abi  aacio.bios.cpp  aacio.bios.hpp
contracts/aacio.msig/: CMakeLists.txt  README.md  aacio.msig.cpp  aacio.msig.hpp
contracts/aacio.sudo/: CMakeLists.txt  README.md  aacio.sudo.abi  aacio.sudo.cpp  aacio.sudo.hpp
contracts/aacio.system/: CMakeLists.txt  README.md  aacio.system-buyrambytes-rc.md  aacio.system-clause-constitution-rc.md  aacio.system-regproducer-rc.md  (+14 more)
debian/: postinst
libraries/chain/: CMakeLists.txt  aacio_contract.cpp  aacio_contract_abi.cpp  abi_serializer.cpp  apply_context.cpp  asset.cpp  authorization_manager.cpp  block.cpp  block_header.cpp  block_header_state.cpp  block_log.cpp  block_state.cpp  block_trace.cpp  chain_config.cpp  chain_controller.cpp  chain_id_type.cpp  controller.cpp  fork_database.cpp  genesis_state.cpp  genesis_state_root_key.cpp.in  get_config.cpp  global_property_object.cpp  merkle.cpp  name.cpp  resource_limits.cpp  test.cpp  transaction.cpp  transaction_context.cpp  transaction_metadata.cpp  wasm_aacio_binary_ops.cpp  wasm_aacio_injection.cpp  wasm_aacio_validation.cpp  wasm_interface.cpp  wast_to_wasm.cpp
libraries/chain/contracts/: aacio_contract.cpp  abi_serializer.cpp  chain_initializer.cpp  genesis_state.cpp
libraries/chain/include/aacio/chain/: aacio_contract.hpp  abi_def.hpp  abi_serializer.hpp  account_object.hpp  action.hpp  action_objects.hpp  action_receipt.hpp  apply_context.hpp  asset.hpp  authority.hpp  authority_checker.hpp  authorization_manager.hpp  base.hpp  block.hpp  block_header.hpp  block_header_state.hpp  block_log.hpp  block_state.hpp  block_summary_object.hpp  block_timestamp.hpp  block_trace.hpp  chain_config.hpp  chain_controller.hpp  chain_id_type.hpp  config.hpp  contract_table_objects.hpp  contract_types.hpp  controller.hpp  core_symbol.hpp.in  exceptions.hpp  ext.hpp  fixed_key.hpp  fork_database.hpp  generated_transaction_object.hpp  genesis_state.hpp  get_config.hpp  global_property_object.hpp  immutable_chain_parameters.hpp  incremental_merkle.hpp  internal_exceptions.hpp  (+27 more)
libraries/chain/include/aacio/chain/contracts/: aac_contract.hpp  abi_serializer.hpp  chain_initializer.hpp  contract_table_objects.hpp  genesis_state.hpp  types.hpp
libraries/chain/include/aacio/chain/webassembly/: binaryen.hpp  common.hpp  runtime_interface.hpp  wavm.hpp
libraries/chain/webassembly/: binaryen.cpp  wavm.cpp
libraries/testing/: CMakeLists.txt  tester.cpp  tester_network.cpp
libraries/testing/include/aacio/testing/: chainbase_fixture.hpp  tester.hpp  tester_network.hpp
plugins/: aacio-make_new_plugin.sh
programs/: CMakeLists.txt
programs/kaacd/: CMakeLists.txt  main.cpp
scripts/: CMakeLists.txt  aacio-tn_bounce.sh  aacio-tn_down.sh  aacio-tn_roll.sh  aacio-tn_up.sh  aacio_build_amazon.sh  aacio_build_centos.sh  aacio_build_darwin.sh  aacio_build_fedora.sh  aacio_build_ubuntu.sh  abigen.sh  base-init.sh  clean_old_install.sh
tests/: CMakeLists.txt  Cluster.py  Node.py  TestHelper.py  WalletMgr.py  consensus-validation-malicious-producers.py  distributed-transactions-remote-test.py  distributed-transactions-test.py  impaired_network.py  lossy_network.py  nodaac_run_remote_test.py  nodaac_run_test.py  nodaac_under_min_avail_ram.py  nodaac_voting_test.py  p2p_network_test.py  p2p_stress.py  p2p_test_peers.py  restart-scenarios-test.py  sample-cluster-map.json  testUtils.py  trans_sync_across_mixed_cluster_test.sh  validate-dirty-db.py  wallet_tests.cpp
tools/: CMakeLists.txt  aaciocpp.in  print_floats.cpp
unittests/: CMakeLists.txt  aacio.sudo_tests.cpp  aacio.system_tests.cpp  aacio.token_tests.cpp  aacio_system_tester.hpp  abi_tests.cpp  api_tests.cpp  auth_tests.cpp  block_tests.cpp  block_timestamp_tests.cpp  bootseq_tests.cpp  currency_tests.cpp  database_tests.cpp  delay_tests.cpp  dice_tests.cpp  exchange_tests.cpp  forked_tests.cpp  identity_tests.cpp  main.cpp  message_buffer_tests.cpp  misc_tests.cpp  multi_index_tests.cpp  multisig_tests.cpp  payloadless_tests.cpp  producer_schedule_tests.cpp  ram_tests.cpp  resource_limits_test.cpp  special_accounts_tests.cpp  tic_tac_toe_tests.cpp  wasm_tests.cpp  whitelist_blacklist_tests.cpp
(+30987 files in other folders)
